apps/base/owncloud/01-owncloud.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      securityContext:
        fsGroup: 33        # ensures volume files are accessible by www-data
        runAsUser: 33
      containers:
      - name: owncloud
        image: owncloud:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: owncloud-data
          mountPath: /var/www/html/data
      volumes:
      - name: owncloud-data
        persistentVolumeClaim:
          claimName: owncloud-data-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: owncloud-service
spec:
  selector:
    app: owncloud
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
